--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -13,14 +13,13 @@ import Boton from '../atoms/Boton.astro';
 			</p>
 			<p>Former agricultural engineer turned Full stack web
 				developer..
-				With 8 years of experience in improving crop
-				production efficiency and improving agricultural
+				With 8 years of experience in improving agricultural
 				processes, I bring an interesting perspective to full
-				stack web development. My background has honed my problemsolving
+				stack web development. My background has honed my problem-solving
 				skills, attention to detail, and ability to
-				optimize processes. A bit obseesed with always
-				learning new things</p>
-			<Boton href="#" texto="boton verde principal"/>
+				optimize processes. Always
+				learning new things..</p>
+			<Boton href="/About.astro" texto="boton verde principal"/>
 		</div>
     <img
 		class="hero__img"
