--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,6 +81,8 @@ body {
 	width: 100%;
 	background: var(--site-bg) no-repeat;
 	background: var(--site-bg) no-repeat;
+
+	
 }
 main {
 	align-self: center;
@@ -101,5 +103,24 @@ p {
 	max-width: 117.8rem;
 }
 
+@keyframes show {
+	from {
+		opacity: 0;
+		scale: 25%;
+	}
+	to {
+		opacity: 1;
+		scale: 100%;
+	}
+}
 
+img {
+	view-timeline: --image;
+	view-timeline-axis: block;
+  
+	animation-timeline: --image ;
+	animation-name: show;
 
+	animation-range: entry 25% cover 50%;
+	animation-fill-mode: both;
+}
