--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -19,7 +19,7 @@ import Boton from '../atoms/Boton.astro';
 				skills, attention to detail, and ability to
 				optimize processes. Always
 				learning new things..</p>
-			<Boton href="/About.astro" texto="boton verde principal"/>
+			<!-- <Boton href="/About.astro" texto="boton verde principal"/> -->
 		</div>
     <img
 		class="hero__img"
