--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -7,7 +7,7 @@ import Boton2 from './atoms/Boton2.astro';
 
 <!-- <a href="/" class="justify-content-start"> -->
     <div class="justify-start">
-        <Boton2 href="#" texto=""/>
+        <Boton2 href="" texto=""/>
     </div>
     <h3 class="color__gradiente header__title">
         
