--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -11,7 +11,8 @@ import Boton from '../atoms/Boton.astro';
 			<p class="hero__text">
 				Fullstack Web developer
 			</p>
-			<p>Former agricultural engineer turned Full stack web
+			<div class="pepe">
+			<p class="typed-out" >Former agricultural engineer turned Full stack web
 				developer..
 				With 8 years of experience in improving agricultural
 				processes, I bring an interesting perspective to full
@@ -19,10 +20,12 @@ import Boton from '../atoms/Boton.astro';
 				skills, attention to detail, and ability to
 				optimize processes. Always
 				learning new things..</p>
-			<!-- <Boton href="/About.astro" texto="boton verde principal"/> -->
+			</div>
+			
+				<!-- <Boton href="/About.astro" texto="boton verde principal"/> -->
 		</div>
     <img
-		class="hero__img"
+		class="hero__img slide-left"
 		src="/img/Seba imagen cv.png"
 		alt="Imagen Seba cv "
 		width="374"
