--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -1,107 +1,163 @@
 .hero {
-	padding: 7rem 2.2rem  2.2rem;
-	width: 100%;
-	height: 100vh;
-	min-height: 100dvh;
-	background-size: 200%;
-	display: flex;
-	flex-direction: column;
-	color: var(--on-primary);
-	background: var(--hero-bg);
-	animation: presentation 3s linear forwards;
-	align-items: center;
-	flex-wrap: wrap-reverse;
-	position: relative;
-	justify-content: center;
+  padding: 7rem 2.2rem 2.2rem;
+  width: 100%;
+  height: 100vh;
+  min-height: 100dvh;
+  background-size: 200%;
+  display: flex;
+  flex-direction: column;
+  color: var(--on-primary);
+  background: var(--hero-bg);
+  animation: presentation 3s linear forwards;
+  align-items: center;
+  flex-wrap: wrap-reverse;
+  position: relative;
+  justify-content: center;
 }
 
 .hero::after {
-	content: '';
-	position: absolute;
-	height: 5rem;
-	width: 100%;
-	background: linear-gradient(0deg, var(--primary-0), #f1080800);
-	bottom: 0;
+  content: '';
+  position: absolute;
+  height: 5rem;
+  width: 100%;
+  background: linear-gradient(0deg, var(--primary-0), #f1080800);
+  bottom: 0;
 }
 
 .hero .hero__img {
-	width: 100%;
-	max-width: 27rem;
-	border-radius: 30%;
-	height: auto;
-	background: linear-gradient(to bottom, rgba(59, 59, 66, 0.342), rgba(4, 4, 31, 0.5));
+  width: 100%;
+  max-width: 27rem;
+  border-radius: 20%;
+  height: auto;
+  background: linear-gradient(
+    to bottom,
+    rgba(59, 59, 66, 0.342),
+    rgba(4, 4, 31, 0.5)
+  );
   opacity: 0.75;
-
 }
 
+.slide-left {
+  animation: slide-left 1.4s linear both;
+}
+@keyframes slide-left {
+  0% {
+    transform: translateX(15px);
+    opacity: 50%;
+  }
+  100% {
+    transform: translateX(-10px);
+    opacity: 75%;
+  }
+}
+
+ /* .typed-out {
+  overflow: hidden;
+  border-right: 0.15em solid rgb(81, 175, 131);
+  white-space: nowrap;
+  font-size: 1.6rem;
+  width: 0;
+  animation: typing 2s steps(20, end) forwards;
+} */
+
+/*
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: rgba(255, 255, 255, 0.75);
+  }
+  to {
+    border-right-color: transparent;
+  }
+} */
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+} 
+
 .hero .hero__container {
-	display: grid;
-	grid-template-columns: 1fr auto;
-	width: 100%;
-	max-width: var(--max-width);
-	gap: 8rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  width: 100%;
+  max-width: var(--max-width);
+  gap: 8rem;
 }
 
 .hero .hero__text {
-	font-size: var(--text-xx-large);
+  font-size: var(--text-xx-large);
 }
 
 .hero__container .text__content {
-	font-weight: 600;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	gap: 4rem;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 4rem;
 }
 
 .hero__container .text__content .hero__title {
-	font-size: var(--text-xxx-large);
-	line-height: var(--text-xxx-large);
+  font-size: var(--text-xxx-large);
+  line-height: var(--text-xxx-large);
 }
 
 .hero__container .hero__title p {
-	font-size: var(--text-x-large);
-	font-weight: normal;
-	color: var(--primary-90);
-	max-width: 80%;
+  font-size: var(--text-x-large);
+  font-weight: normal;
+  color: var(--primary-90);
+  max-width: 80%;
 }
 
 @media screen and (max-width: 768px) {
-	.hero {
-		padding: 12rem 0 5rem 0;
-		height: fit-content;
-		margin: 2rem;
-	}
-	.hero .hero__img {
-		max-width: 28rem;
-	}
-	.hero .hero__container {
-		display: flex;
-		max-width: 100%;
-		gap: 0;
-		flex-direction: column-reverse;
-		justify-content: center;
-		align-items: center;
-		
-	}
-	.hero .text__content {
-		align-items: center;
-	}
+  .hero {
+    padding: 12rem 0 5rem 0;
+    height: fit-content;
+    margin: 2rem;
+  }
+  .hero .hero__img {
+    max-width: 28rem;
+  }
+  .hero .hero__container {
+    display: flex;
+    max-width: 100%;
+    gap: 0;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero .text__content {
+    align-items: center;
+  }
 
-	.hero .hero__text {
-		font-size: var(--text-x-large);
-		text-align: center;
-	}
+  .hero .hero__text {
+    font-size: var(--text-x-large);
+    text-align: center;
+  }
 }
 
 @keyframes presentation {
-	0% {
-		background-size: 200%;
-	}
-	50% {
-		background-position: 70%;
-	}
-	100% {
-		background-size: 100%;
-	}
+  0% {
+    background-size: 200%;
+  }
+  50% {
+    background-position: 70%;
+  }
+  100% {
+    background-size: 100%;
+  }
 }
