--- a/src/components/About/About.astro
+++ b/src/components/About/About.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import SocialIcons from '../SocialIcons.astro';
 import Title from '../atoms/Title.astro';
 import "./about.css"
@@ -27,4 +27,4 @@ import "./about.css"
 		</div>
 	</div>
 
-</section>
+</section> -->
