--- a/src/components/atoms/Boton.astro
+++ b/src/components/atoms/Boton.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import '../hero/hero.css';
 const { href, texto } = Astro.props;
 ---
@@ -24,4 +24,4 @@ const { href, texto } = Astro.props;
 	.button:active {
 		opacity: 0.5;
 	}
-</style>
+</style> -->
