--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import BlogHome from '../components/BlogHome.astro';
 import { mainMenu } from '../components/data/menuData';
 import Footer from '../components/Footer/Footer.astro';
 import Header from '../components/header/Header.astro';
-import Hero from '../components/hero/Hero.astro';
+import Section1 from '../components/section1/Section1.astro';
 import Portfolio from '../components/Portfolio.astro';
 import Skills from '../components/skills/Skills.astro';
 import Layout from '../layouts/Layout.astro';
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout title="Sebastian Prado  | Fullstack Developer">
 	<Header origin={mainMenu} />
 	<main class="self-center w-full">
-		<Hero />
+		<Section1 />
 		<!-- <About /> -->
 		<Portfolio />
 		<Skills />
