--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,4 +1,4 @@
-.about {
+/* .about {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -9,7 +9,7 @@
 .about__container {
 	display: flex;
 	padding: 11rem 13.1rem;
-	/* flex-wrap: wrap; */
+	/* flex-wrap: wrap; 
 	justify-content: space-around;
 	gap: 4.4rem;
 }
@@ -52,4 +52,4 @@
 		min-width: 29.5rem;
 		min-height: 38.1rem;
 	}
-}
+} */
