--- a/src/components/atoms/Boton2.astro
+++ b/src/components/atoms/Boton2.astro
@@ -1,13 +1,8 @@
 ---
-import '../hero/hero.css';
+import '../section1/section1.css';
 const { href, texto } = Astro.props;
 ---
-<!-- {
-    title: 'CV',
-    icon: 'tabler:file-cv',
-    href: '../docs/CV Sebastian Prado (2).pdf',
 
-} -->
 <a class="primary button" href={'docs/CV Sebastian Prado (3).pdf'}> CV</a>
 
 <style>
