--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,10 @@
 ---
-// import Layout from "../layouts/Layout.astro";
+import Layout from "../layouts/Layout.astro";
 
 
-// ---
+---
 
-// <Layout title="Acerca de Nosotros">
+<Layout title="Acerca de Nosotros">
 
-//     <h2>Sebassss</h2>
-// </Layout>
+    <h2>Sebassss</h2>
+</Layout>
