--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -1,18 +1,18 @@
 ---
-interface Props {
-	date: Date;
-	clase: string
-}
+// interface Props {
+// 	date: Date;
+// 	clase: string
+// }
 
-const { date,clase } = Astro.props;
----
+// const { date,clase } = Astro.props;
+// ---
 
-<time  class={clase} datetime={date.toISOString()}>
-	{
-		date.toLocaleDateString('en-us', {
-			year: 'numeric',
-			month: 'short',
-			day: 'numeric',
-		})
-	}
-</time>
+// <time  class={clase} datetime={date.toISOString()}>
+// 	{
+// 		date.toLocaleDateString('en-us', {
+// 			year: 'numeric',
+// 			month: 'short',
+// 			day: 'numeric',
+// 		})
+// 	}
+// </time>
