--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 import CardBlog from '../../components/CardBlog.astro';
@@ -64,4 +64,4 @@ const posts = (await getCollection('blog')).sort(
 			min-height: 100dvh;
 		}
 	}
-</style>
+</style> -->
