--- a/src/components/section1/section1.css
+++ b/src/components/section1/section1.css
@@ -1,7 +1,7 @@
 .hero {
   padding: 7rem 2.2rem 2.2rem;
   width: 100%;
-  max-height: 130vh;
+  max-height: 200vh;
   min-height: 130dvh;
   background-size: 200%;
   display: flex;
@@ -144,9 +144,13 @@
     flex-direction: column-reverse;
     justify-content: center;
     align-items: center;
+    height: fit-content;
+
   }
   .hero .text__content {
     align-items: center;
+    height: fit-content;
+
   }
 
   .hero .hero__text {
