--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -17,6 +17,9 @@ import Card from './card-portfolio/CardPortfolio.astro';
 </section>
 
 <style>
+	.portfolio__container{
+		margin-top: 10rem;
+	}
 	.portfolio__elements {
 		max-width: var(--max-width);
 		display: flex;
