--- a/src/components/section1/Section1.astro
+++ b/src/components/section1/Section1.astro
@@ -7,13 +7,15 @@ import './section1.css';
 	<div class="hero__container">
 		<div class="text__content">
 			<h1 class="hero__title color__gradiente tracking-in-contract">Sebastian Prado </h1>
-			<p class="hero__text tracking-in-expand">
-				Fullstack Web developer
+			<p class="hero__text color__gradiente tracking-in-contract typed-out ">
+				<p class="hero__text color__gradiente tracking-in-contract typed-out">
+					&lt; Full-stack web developer/&gt;...
+				  </p>
 			</p>
-			<div class="pepe">
-			<p class="typed-out" >My dedication to programming and web design is reflected in the projects I completed during my studies, 
+			<div class="pepe ">
+				<p class=" " >My dedication to programming and web design is reflected in the projects I completed during my studies, 
 				such as creating an interactive website for a small local business, which enabled me to apply my practical knowledge 
-				in a real-world setting. This experience also highlights my strong skills in React, JavaScript, and MySQL/MongoDB. Always
+				in a real-world setting. This experience also highlights my strong skills in React, JavaScript, and MySQL/ MongoDB. Always
 				learning new things..</p>
 			</div>
 			
