--- a/src/components/skills/Skills.astro
+++ b/src/components/skills/Skills.astro
@@ -11,10 +11,11 @@ import terminalIcon from '../skills/atoms/terminal-icon/terminal-icon.module.css
 	<Title2 contenido="Checked" />
   </div> -->
 
-<section id="skills">
+<section id="skills" >
+	<div class="firstDivSkills"></div>
 	<SkillsOnTerminal />
 
-	<div class="text-content mx-5">
+	<div class="text-content mx-5 ">
 		<Title2 contenido="Checked skills" />
       <div class="terminal__skills">
       <svg xmlns="http://www.w3.org/2000/svg" width="10rem" height="10rem" viewBox="1 1 20 24" {...props}>
