--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -4,7 +4,8 @@
   padding: 1.1rem;
   gap: 2.2rem;
   margin: 4rem auto;
-  margin-top: 10rem;
+  margin-top: 5rem;
+  padding-top: 10rem;
 }
 
 #skills .text-content {
