--- a/src/components/section1/Section1.astro
+++ b/src/components/section1/Section1.astro
@@ -1,5 +1,11 @@
 ---
 import './section1.css';
+import Swiper from 'swiper';
+// import Swiper styles
+import 'swiper/css';
+
+const swiper = new Swiper();
+
 ---
 
 <section class="hero">
@@ -9,14 +15,15 @@ import './section1.css';
 			<h1 class="hero__title color__gradiente tracking-in-contract">Sebastian Prado </h1>
 			<p class="hero__text color__gradiente tracking-in-contract typed-out ">
 				<p class="hero__text color__gradiente tracking-in-contract typed-out">
-					&lt; Full-stack web developer/&gt;...
+					&lt; Full-stack web developer/&gt;
 				  </p>
 			</p>
 			<div class="pepe ">
-				<p class=" " >My dedication to programming and web design is reflected in the projects I completed during my studies, 
-				such as creating an interactive website for a small local business, which enabled me to apply my practical knowledge 
-				in a real-world setting. This experience also highlights my strong skills in React, JavaScript, and MySQL/ MongoDB. Always
-				learning new things..</p>
+				<p class=" text" >My dedication to programming and web design is reflected in the projects I completed during my 
+			    studies, such as creating an interactive website for a small local business, which enabled me to apply
+				 my practical knowledge in a real-world setting. This experience also highlights my strong skills 
+				 in <strong>React </strong>, <strong>JavaScript</strong>, and <strong>MySQL/MongoDB</strong>. Always
+				 learning new things..</p>
 			</div>
 			
 		</div>
@@ -28,4 +35,5 @@ import './section1.css';
     	height="384"
 	/>
 	</div>
-</section>
+	
+
