--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -17,7 +17,26 @@ import Card from './card-portfolio/CardPortfolio.astro';
 </section>
 
 <style>
-	.portfolio__container{
+	#portafolio {
+		padding-bottom: 30px;
+  position: relative;
+  background: rgb(2, 1, 19);
+  background: linear-gradient(134deg, #dd050500 32%, rgb(7, 3, 40) 79%);
+
+}
+
+#portafolio::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  background: linear-gradient(to bottom, rgba(8, 3, 50, 0.168) 79%, rgb(6, 6, 42) 90%);
+  pointer-events: none; /* Ensures it does not interfere with user interactions */
+}
+
+.portfolio__container{
 		margin-top: 10rem;
 	}
 	.portfolio__elements {
