--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -4,8 +4,7 @@
   max-width: calc(var(--max-width) + 18.2rem);
   padding: 5.1rem;
   gap: 9.2rem;
-  background: rgba(11, 19, 60, 0.848);
-  background: radial-gradient(circle, rgb(16, 25, 69) 21%, rgb(3, 8, 36) 84%);
+  background: radial-gradient(circle, rgb(24, 35, 92) 21%, rgb(5, 12, 49) 84%);
 }
 
 #skills::before {
@@ -20,14 +19,15 @@
 }
 
 #skills::after {
-  content: "";
-  position: absolute;
+  content: ''; /* Requerido para mostrar el pseudoelemento */
+  position: absolute; /* Posiciónalo absolutamente dentro de #skills */
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background: rgba(17, 17, 20, 0.007); /* Ajusta el color y opacidad aquí */
-  z-index: -1; /* Asegúrate de que el gradiente esté detrás del contenido */
+  height: 2rem; /* Ajusta la altura para cubrir el área deseada */
+  background: linear-gradient(to bottom, rgb(2, 2, 45) 0%, rgba(5, 3, 36, 0.04) 100%);
+  pointer-events: none; /* Asegúrate de que no interfiera con las interacciones del usuario */
+  z-index: -1; /* Asegúrate de que esté detrás del contenido */
 }
 .contenedorSkills{
   border: solid salmon 3px;
@@ -73,19 +73,21 @@
   max-width: calc(var(--max-width) + 18.2rem);
   padding: 5.1rem;
   gap: 9.2rem;
-  background: rgba(11, 19, 60, 0.848);
-  background: radial-gradient(circle, rgb(15, 24, 65) 21%, rgb(3, 8, 36) 84%);
+  
+  background: radial-gradient(circle, rgb(24, 35, 87) 21%, rgb(4, 11, 49) 84%);
 }
 #inProcess::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(11, 19, 60, 0.5); /* Ajusta el color y opacidad aquí */
+  background: rgba(24, 35, 87, 0.6); /* Ajusta el color y opacidad aquí */
   z-index: -1; /* Asegúrate de que el gradiente esté detrás del contenido */
+  border: solid salmon 1px;
 }
+
 
 #inProcess .text-content {
   max-width: 40%;
