--- a/src/components/section1/Section1.astro
+++ b/src/components/section1/Section1.astro
@@ -25,6 +25,13 @@ const swiper = new Swiper();
 				 in <strong>React </strong>, <strong>JavaScript</strong>, and <strong>MySQL/MongoDB</strong>. Always
 				 learning new things..</p>
 			</div>
+			<!-- <a
+  href="https://wa.me/61487175193?text=Hola%20seba"
+  target="_blank"
+  rel="noopener noreferrer"
+>
+  Escríbeme
+</a> -->
 			
 		</div>
     <img
