--- a/src/components/section1/Section1.astro
+++ b/src/components/section1/Section1.astro
@@ -1,10 +1,12 @@
 ---
+const props = Astro.props;
+
 import './section1.css';
 import Swiper from 'swiper';
 // import Swiper styles
 import 'swiper/css';
 
-const swiper = new Swiper();
+
 
 ---
 
@@ -25,22 +27,26 @@ const swiper = new Swiper();
 				 in <strong>React </strong>, <strong>JavaScript</strong>, and <strong>MySQL/MongoDB</strong>. Always
 				 learning new things..</p>
 			</div>
-			<!-- <a
-  href="https://wa.me/61487175193?text=Hola%20seba"
-  target="_blank"
-  rel="noopener noreferrer"
->
-  Escríbeme
-</a> -->
+
+			<div>
+			</div><!-- <a
+			href="https://wa.me/61487175193?text=Hola%20seba"
+			target="_blank"
+			rel="noopener noreferrer"
+			>
+			Escríbeme
+			</a> -->
 			
 		</div>
-    <img
+		<img
 		class="hero__img slide-left"
 		src="/img/Seba imagen cv.png"
 		alt="Imagen Seba cv "
 		width="374"
     	height="384"
-	/>
+		/>
+		
+		
 	</div>
 	
 
