--- a/src/components/skills/Skills.astro
+++ b/src/components/skills/Skills.astro
@@ -5,7 +5,7 @@ import TerminalIcon from './atoms/terminal-icon/TerminalIcon.astro';
 import './components/skills-on-terminal/skills-on-terminal.css'
 const props = Astro.props
 import './skills.css';
-import terminalIcon from '../skills/atoms/terminal-icon/terminal-icon.module.css';
+import terminalIcon from './terminal-icon.module.css';
 ---
   <!-- <div class="descripcion__container pepe card__title">
 	<Title2 contenido="Checked" />
