--- a/src/components/atoms/Title2.astro
+++ b/src/components/atoms/Title2.astro
@@ -2,11 +2,13 @@
 const { contenido, margin } = Astro.props;
 ---
 
-<h2 class="color__gradiente mb-3" style=`margin-bottom:${margin}` > {contenido} </h2>
+<h2 class=" mb-3" style=`margin-bottom:${margin}` > {contenido} </h2>
 
 <style>
 	h2 {
-		font-size: 5rem;
-		font-weight: 350;
+		font-size: 4rem;
+		font-weight: 450;
+		color: rgba(252, 253, 253, 0.736) ;
+		letter-spacing: 0.8rem;
 	}
 </style>
