--- a/src/components/card-portfolio/card-portfolio.css
+++ b/src/components/card-portfolio/card-portfolio.css
@@ -43,7 +43,7 @@
 	padding: 4px 22px;
 	font-size: var(--text-title);
 	font-weight: 200;
-	background: rgba(67, 107, 86, 0.808); /*fondo titulo */
+	background: rgba(27, 29, 60, 0.808); /*fondo titulo */
 	backdrop-filter: blur(10px);
 	z-index: 2;
 	transform: translateY(-100%);
@@ -95,23 +95,27 @@
 	width: 2px;
 	background: var(--primary);
 	border-radius: 4px;
+	background-color: #add8e6;
+
 }
 
 .card__portfolio .skills {
 	display: flex;
-	gap: 10px;
-	font-size: 3rem; /* Estamos usando rem para los textos */
+	gap: 20px;
+	font-size: 2.3rem; /* Estamos usando rem para los textos */
+	opacity: 60%;
 }
 
 .card__portfolio .buttons {
 	padding: 14px;
 	width: 100%;
-	height: 47px;
+	height: 32px;
 	box-sizing: border-box;
 	display: flex;
 	justify-content: center;
-	gap: 22px;
+	gap: 32px;
 	font-size: var(--text-button);
+
 }
 
 .card__portfolio .buttons a {
@@ -132,7 +136,7 @@
 	transform-origin: 0 0;
 	transform: scale(0);
 	background: var(--primary);
-	transition: 0.35s transform;
+	transition: 0.65s transform;
 }
 .card__portfolio .buttons a:hover::after {
 	transform: scale(1);
@@ -141,6 +145,6 @@
 .card__portfolio .buttons a span {
 	display: flex;
 	align-items: center;
-	gap: 4px;
+	gap: 1px;
 }
 
