--- a/src/components/section1/Section1.astro
+++ b/src/components/section1/Section1.astro
@@ -2,11 +2,6 @@
 const props = Astro.props;
 
 import './section1.css';
-import Swiper from 'swiper';
-// import Swiper styles
-import 'swiper/css';
-
-
 
 ---
 
@@ -17,7 +12,7 @@ import 'swiper/css';
 			<h1 class="hero__title color__gradiente tracking-in-contract">Sebastian Prado </h1>
 			<p class="hero__text color__gradiente tracking-in-contract typed-out ">
 				<p class="hero__text color__gradiente tracking-in-contract typed-out">
-					&lt; Full-stack web developer/&gt;
+					&lt;/ Full-stack web developer &gt;
 				  </p>
 			</p>
 			<div class="pepe ">
@@ -29,13 +24,7 @@ import 'swiper/css';
 			</div>
 
 			<div>
-			</div><!-- <a
-			href="https://wa.me/61487175193?text=Hola%20seba"
-			target="_blank"
-			rel="noopener noreferrer"
-			>
-			Escríbeme
-			</a> -->
+			</div>
 			
 		</div>
 		<img
@@ -49,4 +38,3 @@ import 'swiper/css';
 		
 	</div>
 	
-
