--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -20,15 +20,14 @@
 }
 
 #skills::after {
-  content: ''; /* Requerido para mostrar el pseudoelemento */
-  position: absolute; /* Posiciónalo absolutamente dentro de #skills */
-  top: 0;
+  content: '';
+  position: absolute;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 2rem; /* Ajusta la altura para cubrir el área deseada */
-  background: linear-gradient(to bottom, rgb(2, 2, 45) 0%, rgba(5, 3, 36, 0.04) 100%);
-  pointer-events: none; /* Asegúrate de que no interfiera con las interacciones del usuario */
-  z-index: -1; /* Asegúrate de que esté detrás del contenido */
+  height: 20px;
+  background: linear-gradient(to bottom, rgb(5, 12, 49), rgb(4, 11, 49));
+  pointer-events: none;
 }
 .contenedorSkills{
   border: solid salmon 3px;
@@ -74,21 +73,25 @@
   max-width: calc(var(--max-width) + 18.2rem);
   padding: 5.1rem;
   gap: 9.2rem;
-  
   background: radial-gradient(circle, rgb(24, 35, 87) 21%, rgb(4, 11, 49) 84%);
+  margin-top: -2rem; /* Ajusta este valor para solapar las secciones */
 }
+
 #inProcess::before {
   content: '';
   position: absolute;
-  top: 0;
+  top: -50px; /* Ajusta este valor para extender el gradiente hacia arriba */
   left: 0;
   width: 100%;
-  height: 100%;
-  background: rgba(24, 35, 87, 0.6); /* Ajusta el color y opacidad aquí */
-  z-index: -1; /* Asegúrate de que el gradiente esté detrás del contenido */
-  border: solid salmon 1px;
+  height: calc(100% + 50px); /* Ajusta este valor para que coincida con el top */
+  background: linear-gradient(to bottom, 
+    rgb(5, 12, 49) 0%,
+    rgb(24, 35, 87) 50%,
+    rgba(24, 35, 87, 0.6) 100%
+  );
+  z-index: -1;
+  pointer-events: none;
 }
-
 
 #inProcess .text-content {
   max-width: 40%;
