--- a/src/index.css
+++ b/src/index.css
@@ -484,6 +484,15 @@ h5 {
   }
 }
 
+.sebita{
+  
+    font-family: "Caveat", cursive;
+    font-optical-sizing: auto;
+    font-size: 120px;
+    font-weight: 200;
+    font-style: normal;
+  
+}
 /* ============================   Section HERO2 ========================== */
 
 /* ============================   Section ENCABEZADO PROJECTS ========================== */
